<resources>
    <string name="app_name">M-Bonk</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_profil">Profil</string>
    <string name="drawer_item_report">Laporan</string>
    <string name="drawer_item_laporan">Laporan Anda</string>
    <string name="nama">Nama Lengkap</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="phone">Nomor Telepon</string>
    <string name="ktp">Nomor KTP</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="city">Kota Asal</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="district">Kecamatan</string>
    <string name="urgent">Urgensi</string>
    <string name="condition">Kondisi Jalan</string>
    <string name="send">Kirim</string>
    <string name="photo">Pilih Foto</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="daftar">Register</string>
    <string name="masukkan_email">Masukkan E-Mail anda</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="btn_link_to_register">Belum menjadi member? Daftar sekarang.</string>
    <string name="btn_link_to_login">Sudah terdaftar! Log in sekarang.</string>
    <string name="kirim">Post Laporan</string>
    <string name="judul">Judul</string>
    <string name="keluhan">Keluhan anda</string>
    <string name="err_msg_name">Masukkan nama lengkap anda</string>
    <string name="err_msg_email">Masukkan alamat E-Mail yang valid</string>
    <string name="err_msg_password">Masukkan password</string>
    <string name="err_msg_judul">Masukkan judul laporan</string>
    <string name="err_msg_isi">Masukkan isi laporan</string>
    <string name="lokasi_anda">Lokasi anda</string>
    <string name="title_activity_maps">Map</string>
    <string name="beranda">Beranda</string>
    <string name="layanan">Layanan</string>
    <string name="peta">Peta</string>
    <string name="status">Status</string>
    <string name="different_login">or</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="already_registered">Already have an account? Sign in</string>
    <string name="prompt_name">Nama</string>
    <string name="save">Simpan</string>
    <string name="action_register">Register</string>
    <string name="wrong">Email atau password anda salah. Silahkan login kembali.</string>
    <string name="profile">Akun Anda</string>
    <string name="profile_detail">Detail Akun</string>
    <string name="user_report">Laporan Anda</string>
    <string name="perbaikan_jalan">Layanan Perbaikan Jalan</string>
    <string name="profile_edit">Edit Akun</string>
    <string name="address">Lokasi Jalan Berlubang</string>
    <string name="description">Deskripsi</string>
</resources>