<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.EditProfileActivity"
    tools:showIn="@layout/activity_edit_profile">

    <LinearLayout
        android:id="@+id/edit_profile_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/useredit_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:src="@drawable/profile"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/useredit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/useredit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/useredit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/phone"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/useredit_ktp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:text="@string/ktp"
            android:textColor="@color/grey_600"
            android:textSize="18sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/useredit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/city"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/grey_0"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/useredit_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:text="@string/dob"
            android:textColor="@color/grey_600"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:text="@string/gender"
            android:textColor="@color/grey_600"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/useredit_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:padding="12dp"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/btnedit_save"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:text="@string/save"
            android:textColor="@color/grey_0"/>

    </LinearLayout>

</RelativeLayout>
